--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -25,6 +25,12 @@ jobs:
       - name: Run cleanup script
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
+          EMAIL_PORT: ${{ secrets.EMAIL_PORT }}
+          EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
+          EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
+          ADMIN_EMAIL: "admin@wdsj.one"
           USERNAME: "Happy-clo" # 替换成你的GitHub用户名
         run: |
           python .github/scripts/cleanup_script.py
+          python .github/scripts/cleanup_forks.py
