--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -44,3 +44,9 @@ jobs:
           USERNAME: "Happy-clo" # 替换成你的GitHub用户名
         run: |
           python .github/scripts/cleanup_script.py
+      - name: Run auto set perms
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          USERNAME: "Happy-clo" # 替换成你的GitHub用户名
+        run: |
+          python .github/scripts/auto_perms.py
