--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests os time logging
+          pip install requests
       - name: Run cleanup forks
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
