--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -22,6 +22,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install requests
+      - name: Run auto print actions
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          USERNAME: "Happy-clo" # 替换成你的GitHub用户名
+        run: |
+          python .github/scripts/check_actions.py
       - name: Run cleanup forks
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
