--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install requests
+          pip install PyGithub
       - name: Run auto print actions
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
