--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -1,44 +1,50 @@
+# 清理非成功运行和PR的工作流程
 name: Cleanup Non-Successful Runs And PRs
 
+# 触发条件：当推送到main分支或按计划运行（每天凌晨UTC时间）
 on:
   push:
     branches:
       - main
   schedule:
-    # 每天UTC时间00:00运行，你可以根据需要调整这个时间
-    - cron: "0 0 * * *"
-
+    # 每天UTC时间12:00运行，你可以根据需要调整这个时间
+    - cron: "0 12 * * *"
 jobs:
   cleanup:
+    # 运行在最新的Ubuntu环境中
     runs-on: ubuntu-latest
     steps:
+      # 检出代码
       - name: Checkout code
         uses: actions/checkout@v2
+      # 设置Python环境
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: "3.x"
+      # 安装依赖项
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests
-          pip install PyGithub
+          pip install --upgrade -r requirements.txt
+      # 运行清理脚本
       - name: Run cleanup script
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          USERNAME: "Happy-clo" # 替换成你的GitHub用户名
+          USERNAME: "Happy-clo"
         run: |
           python .github/scripts/main.py
+      # 清理forks
       - name: Run cleanup forks
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          USERNAME: "Happy-clo" # 替换成你的GitHub用户名
+          USERNAME: "Happy-clo"
         run: |
           python .github/scripts/cleanup_forks.py
-
+      # 自动设置权限
       - name: Run auto set perms
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          USERNAME: "Happy-clo" # 替换成你的GitHub用户名
+          USERNAME: "Happy-clo"
         run: |
           python .github/scripts/auto_perms.py
