--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -27,6 +27,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade -r requirements.txt
+      - name: Test with pytest auto_perms.py
+        run: |
+          python .github/scripts/test_auto_perms.py
       # 运行清理脚本
       - name: Run cleanup script
         env:
