fix(github-actions): update test workflow to use GH_TOKEN for auth
Update the GitHub Actions test workflow to utilize the GH_TOKEN environment
variable for authentication. This change involves updating the test script
to reference the GH_TOKEN instead of a hard-coded token name, ensuring
compatibility with the new workflow configuration.

--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -28,6 +28,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install --upgrade -r requirements.txt
       - name: Test with pytest auto_perms.py
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          USERNAME: "Happy-clo"
         run: |
           python .github/scripts/test_auto_perms.py
       # 运行清理脚本
