fix(testing): use monkeypatch to set env vars in test_auto_perms
Update the test_auto_perms.py script to utilize monkeypatch for setting
environment variables during tests. This change ensures that environment
variables are correctly mocked and does not require direct modification
of the os.getenv method, improving the testability and maintainability
of the code.

--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -32,6 +32,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           USERNAME: "Happy-clo"
         run: |
+          export GH_TOKEN=test_token
+          export USERNAME=test_user
           python .github/scripts/test_auto_perms.py
       # 运行清理脚本
       - name: Run cleanup script
