--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -22,20 +22,21 @@ jobs:
 
       - name: Generate Random Data and Complex Hash
         run: |
-          for i in {1..20}; do
+          Run for i in {1..20}; do
             RANDOM_DATA=$(openssl rand -base64 96)
             TIMESTAMP=$(date +%s%N)
-            COMPLEX_DATA="$RANDOM_DATA$TIMESTAMP"
-            HASH_VALUE=$(echo -n "$COMPLEX_DATA" | sha512sum | awk '{print \$1}')  # 使用 SHA-512 算法
+            COMPLEX_DATA="$RANDOM_DATA$TIMESTAMP"  
+            HASH_VALUE=$(echo -n "$COMPLEX_DATA" | sha512sum | awk '{print \$1}') 
             
             echo "$RANDOM_DATA" >> daily-commit.txt
             echo "Hash: $HASH_VALUE" >> daily-commit.txt
-
+            
             git config --local user.name "Happy-clo"
             git config --local user.email "support@wdsj.one"
             git add daily-commit.txt
             git commit -m "chore: Daily maintenance - $i times" || echo "No changes to commit"
           done
+
 
           git push
         env:
