--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -26,6 +26,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade -r requirements.txt
+      - name: Updade dependencies
+        run: |
+          python .github/scripts/upgrade_packages.py
+
       - name: Test with pytest auto_perms.py
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
