--- a/.github/workflows/sync_forks.yml
+++ b/.github/workflows/sync_forks.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install aiohttp GitPython
+          pip install aiohttp GitPython beautifulsoup4 lxml
 
       - name: Run sync script
         env:
