--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -26,33 +26,24 @@ jobs:
       - name: Updade dependencies
         run: |
           python .github/scripts/upgrade_packages.py
-
-      - name: Test with pytest auto_perms.py
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          USERNAME: "Happy-clo"
-        run: |
-          export GH_TOKEN=test_token
-          export USERNAME=test_user
-          python .github/scripts/test_auto_perms.py
       # 运行清理脚本
       - name: Run cleanup script
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           USERNAME: "Happy-clo"
         run: |
           python .github/scripts/main.py
       # 清理forks
       - name: Run cleanup forks
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           USERNAME: "Happy-clo"
         run: |
           python .github/scripts/cleanup_forks.py
       # 自动设置权限
       - name: Run auto set perms
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           USERNAME: "Happy-clo"
         run: |
           python .github/scripts/auto_perms.py
