ci: rename workflow to reflect broader cleanup functionality
- Change workflow name from "Cleanup Non-Successful Runs And PRs" to "Cleanup Action Runs And PRs"
- This update reflects the expansion of the workflow's capabilities beyond just non-successful runs

--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -1,7 +1,8 @@
 # 清理非成功运行和PR的工作流程
-name: Cleanup Non-Successful Runs And PRs
+name: Cleanup Action Runs And PRs
 
 on:
+  push:
   schedule:
     - cron: "0 12 * * *"
 
