--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -1,4 +1,3 @@
-# 清理非成功运行和PR的工作流程
 name: Cleanup Action Runs And PRs
 
 on:
@@ -8,40 +7,47 @@ on:
 
 jobs:
   cleanup:
-    # 运行在最新的Ubuntu环境中
     runs-on: ubuntu-latest
     steps:
-      # 检出代码
       - name: Checkout code
-        uses: actions/checkout@v2
-      # 设置Python环境
+        uses: actions/checkout@main
+
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@main
         with:
           python-version: "3.x"
-      # 安装依赖项
+
+      - name: Cache Python dependencies
+        uses: actions/cache@main
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade -r requirements.txt
-      - name: Updade dependencies
+
+      - name: Update dependencies
         run: |
           python .github/scripts/upgrade_packages.py
-      # 运行清理脚本
+
       - name: Run cleanup script
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           USERNAME: "Happy-clo"
         run: |
           python .github/scripts/main.py
-      # 清理forks
+
       - name: Run cleanup forks
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           USERNAME: "Happy-clo"
         run: |
           python .github/scripts/cleanup_forks.py
-      # 自动设置权限
+
       - name: Run auto set perms
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
